[gd_scene load_steps=27 format=2]

[ext_resource path="res://Actors/Player/Sprites/Player_hand_spritesheet_3.png" type="Texture" id=1]
[ext_resource path="res://Actors/Player/Sprites/Player_bag_spritesheet_3.png" type="Texture" id=2]
[ext_resource path="res://Actors/Player/Sprites/Player_body_spritesheet_3.png" type="Texture" id=3]
[ext_resource path="res://Actors/Player/Player.gd" type="Script" id=4]
[ext_resource path="res://Actors/StateMachine/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://Actors/StateMachine/States/Idle.gd" type="Script" id=6]
[ext_resource path="res://Actors/StateMachine/States/Walk.gd" type="Script" id=7]
[ext_resource path="res://Shared/AttackBoxes/HurtBox/HurtBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Actors/StateMachine/States/AirborneState.gd" type="Script" id=9]
[ext_resource path="res://Actors/StateMachine/States/FallState.gd" type="Script" id=10]
[ext_resource path="res://Actors/StateMachine/States/JumpState.gd" type="Script" id=11]
[ext_resource path="res://Actors/StateMachine/States/AttackState.gd" type="Script" id=12]
[ext_resource path="res://Shared/AttackBoxes/HitBox/HitBox.tscn" type="PackedScene" id=13]
[ext_resource path="res://Actors/StateMachine/States/StunnedState.gd" type="Script" id=14]
[ext_resource path="res://Actors/StateMachine/States/RunState.gd" type="Script" id=15]
[ext_resource path="res://Actors/StateMachine/States/DeadState.gd" type="Script" id=16]
[ext_resource path="res://Effects/Animations/FlashAnimator.tscn" type="PackedScene" id=17]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7.5, 12 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteBody/SpriteHand:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteBody/SpriteBag:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteBody/SpriteBag:show_behind_parent")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitBox:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteBody/SpriteHand:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteBody/SpriteBag:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteBody/SpriteBag:show_behind_parent")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.075, 0.225 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitBox:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.225, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "fall"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteBody/SpriteHand:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteBody/SpriteBag:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteBody/SpriteHand:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteBody/SpriteBag:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "jump"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteBody/SpriteHand:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteBody/SpriteBag:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteBody/SpriteHand:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteBody/SpriteBag:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 6, 8 )

[sub_resource type="CapsuleShape2D" id=10]
radius = 14.0
height = 13.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}
max_speed = 80
move_speed = 256
jump_force = 115
invulnerable_duration = 1.5
hop_force = 80

[node name="SpriteBody" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 3 )
offset = Vector2( -5, 0 )
hframes = 24

[node name="SpriteHand" type="Sprite" parent="SpriteBody"]
use_parent_material = true
texture = ExtResource( 1 )
offset = Vector2( -5, 0 )
hframes = 24

[node name="SpriteBag" type="Sprite" parent="SpriteBody"]
show_behind_parent = true
use_parent_material = true
texture = ExtResource( 2 )
offset = Vector2( 11, 0 )
hframes = 24

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 9 )
anims/fall = SubResource( 6 )
anims/idle = SubResource( 3 )
anims/jump = SubResource( 7 )
anims/walk = SubResource( 4 )

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ShortJumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="LedgeDetector" type="RayCast2D" parent="."]
position = Vector2( -11, 0 )
enabled = true
cast_to = Vector2( 0, 17 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
states = {
"air": NodePath("AirborneState"),
"attack": NodePath("AttackState"),
"dead": NodePath("DeadState"),
"fall": NodePath("FallState"),
"idle": NodePath("IdleState"),
"jump": NodePath("JumpState"),
"run": NodePath("RunState"),
"stunned": NodePath("StunnedState"),
"walk": NodePath("WalkState")
}
start_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
animation_name = "idle"

[node name="WalkState" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
animation_name = "walk"
move_speed = 200

[node name="AirborneState" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
animation_name = "jump"
move_speed = 30

[node name="JumpState" type="Node" parent="StateMachine"]
script = ExtResource( 11 )
animation_name = "jump"
jump_force = 120.0

[node name="FallState" type="Node" parent="StateMachine"]
script = ExtResource( 10 )
animation_name = "fall"
move_speed = 30

[node name="AttackState" type="Node" parent="StateMachine"]
script = ExtResource( 12 )
animation_name = "attack"

[node name="StunnedState" type="Node" parent="StateMachine"]
script = ExtResource( 14 )
animation_name = "fall"

[node name="RunState" type="Node" parent="StateMachine"]
script = ExtResource( 15 )
animation_name = "walk"

[node name="DeadState" type="Node" parent="StateMachine"]
script = ExtResource( 16 )
animation_name = "fall"

[node name="HurtBox" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 1, 6 )
shape = SubResource( 8 )

[node name="HitBox" parent="." instance=ExtResource( 13 )]
monitoring = false

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 29, 2 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="FlashAnimator" parent="." instance=ExtResource( 17 )]

[editable path="HurtBox"]
[editable path="HitBox"]
